[package]
name = "bevy_proto"
version = "0.3.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Create config files for entities in Bevy"
repository = "https://github.com/MrGVSV/bevy_proto"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "archetype", "config", "entity", "prefab"]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*"]

[dependencies]
bevy_proto_derive = { version = "0.2", path = "bevy_proto_derive" }
bevy = "0.6"

# Utility
anyhow = "1.0"
indexmap = "1.7"
parking_lot = "0.12"
thiserror = "1.0"

# Serde
serde = "1.0"
serde_yaml = { version = "0.8", optional = true }
serde_ron = { version = "0.7", optional = true, package = "ron" }
serde_json = { version = "1.0", optional = true }

[features]
default = ["analysis", "yaml"]
# If enabled, analyses prototype dependencies and logging (or panicking if `no_cycles` is enabled) on error
analysis = []
# If enabled, panics when a dependency cycle is found, otherwise logs a warning
no_cycles = ["analysis"]
# If enabled, allows for prototypes defined in YAML
yaml = ["serde_yaml"]
# If enabled, allows for prototypes defined in JSON
json = ["serde_json"]
# If enabled, allows for prototypes defined in RON
ron = ["serde_ron"]

[[example]]
name = "attributes"
path = "examples/attributes.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["json"]

[[example]]
name = "bench"
path = "examples/bench.rs"

[[example]]
name = "bundles"
path = "examples/bundles.rs"

[[example]]
name = "config"
path = "examples/config.rs"

[[example]]
name = "handles"
path = "examples/handles.rs"

[[example]]
name = "templates"
path = "examples/templates.rs"