[package]
name = "bevy_proto"
version = "0.7.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Create config files for entities in Bevy"
repository = "https://github.com/MrGVSV/bevy_proto"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "archetype", "config", "entity"]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*"]

[dependencies]
bevy_proto_derive = { version = "0.2", path = "bevy_proto_derive" }
bevy = { version = "0.10", default-features = false, features = ["bevy_asset"] }
serde = "1.0"
typetag = "0.2"
serde_yaml = "0.9"
dyn-clone = "1.0"
indexmap = "1.9"
crossbeam-channel = { version = "0.5", optional = true }
notify = { version = "5.0", optional = true }

[dev-dependencies]
bevy = "0.10"
[features]
default = ["analysis"]
# If enabled, analyses prototype dependencies and logging (or panicking if `no_cycles` is enabled) on error
analysis = []
# If enabled, panics when a dependency cycle is found, otherwise logs a warning
no_cycles = ["analysis"]
# If enabled, allows for hot reloading
hot_reloading = ["dep:crossbeam-channel", "dep:notify"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "bundles"
path = "examples/bundles.rs"

[[example]]
name = "attributes"
path = "examples/attributes.rs"

[[example]]
name = "templates"
path = "examples/templates.rs"

[[example]]
name = "bench"
path = "examples/bench.rs"
