[package]
name = "bevy_proto_backend"
version = "0.4.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Backend crate for bevy_proto"
repository = "https://github.com/MrGVSV/bevy_proto"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = [
    # Crate Features
    "auto_name",
    # Bevy Features
    "bevy_animation",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui"
]

# When enabled, entities will automatically use a prototype's ID as its `Name`
auto_name = []

# Enables registrations for types available with Bevy's bevy_animation feature
bevy_animation = ["bevy/bevy_animation"]
# Enables registrations for types available with Bevy's bevy_audio feature
bevy_audio = ["bevy/bevy_audio"]
# Enables registrations for types available with Bevy's bevy_core_pipeline feature
bevy_core_pipeline = ["bevy/bevy_core_pipeline", "bevy_render"]
# Enables registrations for types available with Bevy's bevy_gltf feature
bevy_gltf = [
    "bevy/bevy_gltf",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
]
# Enables registrations for types available with Bevy's bevy_pbr feature
bevy_pbr = ["bevy/bevy_pbr", "bevy_core_pipeline"]
# Enables registrations for types available with Bevy's bevy_render feature
bevy_render = ["bevy/bevy_render"]
# Enables registrations for types available with Bevy's bevy_scene feature
bevy_scene = ["bevy/bevy_scene", "bevy_render"]
# Enables registrations for types available with Bevy's bevy_sprite feature
bevy_sprite = ["bevy/bevy_sprite", "bevy_render", "bevy_core_pipeline"]
# Enables registrations for types available with Bevy's bevy_text feature
bevy_text = ["bevy/bevy_text", "bevy_sprite", "bevy_render"]
# Enables registrations for types available with Bevy's bevy_ui feature
bevy_ui = [
    "bevy/bevy_ui",
    "bevy_sprite",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_text",
]

[dependencies]
bevy_proto_derive = { version = "0.6", path = "../bevy_proto_derive" }
bevy = { version = "0.11", default-features = false, features = ["bevy_asset"] }
anyhow = "1.0"
serde = "1.0"
thiserror = "1.0"
path-clean = "1.0"
indexmap = "1.9"
parking_lot = "0.12"

[dev-dependencies]
ron = "0.8"