[package]
name = "bevy_proto_derive"
version = "0.6.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Derive macro for use with bevy_proto"
repository = "https://github.com/MrGVSV/bevy_proto"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["assertions"]
# If enabled, static assertions will be generated to enforce certain invariants
# and improve compile-time error reporting.
assertions = []

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.3"
optional-error = "0.1"
to_phantom = "0.1"